<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadiobuttonDemo">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_female"/>

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_male"/>

        <RadioButton
            android:id="@+id/rb_bisexual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_bisexual"/>

        <RadioButton
            android:id="@+id/rb_gay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_gay"/>

        <RadioButton
            android:id="@+id/rb_lesbian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_lesbian"/>

        <RadioButton
            android:id="@+id/rb_queer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_queer"/>

    </RadioGroup>

</RelativeLayout>