<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckBoxDemo"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_crazy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_crazy"
        android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/cb_angry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_angry" />

        <CheckBox
            android:id="@+id/cb_surprise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_surprise" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <CheckBox
        android:id="@+id/cb_cute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_cute"
        android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/cb_sweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_sweet"/>

        <CheckBox
            android:id="@+id/cb_happy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_happy"/>

    </LinearLayout>

</LinearLayout>