<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextFieldDemo">

    <TextView
        android:id="@+id/tv_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_fname"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_fname"
        android:layout_below="@+id/tv_fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_fname" />

    <TextView
        android:id="@+id/tv_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_lname"
        android:layout_below="@+id/et_fname"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_lname"
        android:layout_below="@+id/tv_lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_lname" />

</RelativeLayout>